<resources>
    <string name="app_name">Zoomcar</string>
    <string name="search_hint">Search by name,weight or type</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_card_detail">Car Details</string>
    <string name="fa_car">&#xf1b9;</string>
    <string name="fa_car_count">&#xf1b9; Count</string>
    <string name="fa_sort">&#xf160; Sort</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_portfolio">&#xf0ac;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_rupee">&#xf156;</string>
    <string name="fa_link">&#xf08e;</string>
    <string name="fa_share">&#xf1e0;</string>
    <string name="fa_message">&#xf0e0;</string>
    <string name="fa_ice">&#xf069;</string>
    <string name="fa_users">&#xf0c0;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_cancel">&#xf00d;</string>
    <string name="fa_rating">&#xf087;</string>
    <string name="fa_marker">&#xf041;</string>
    <string name="fa_clock">&#xf017;</string>
    <string name="title_activity_booking_log">BookingLogActivity</string>
    <string name="title_activity_splash">Welcome to Zoomcar</string>
    <string name="title_activity_car_searchable">Search Cars</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
</resources>
