<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zoomcar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.partho.zoomcar.zoomcarapp.CarDetailActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/zc_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="200dp">

            <!-- Top Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <!--Car Image-->
                <LinearLayout
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    >

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/zc_car_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="200dp"
                        android:scaleType="fitCenter"
                        />

                </LinearLayout>

                <!--Car Ratings-->
                <LinearLayout
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical"
                    >

                    <RatingBar
                        android:id="@+id/zc_car_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:stepSize="0.1"
                        style="?android:attr/ratingBarStyleSmall"
                        android:isIndicator="true"
                        android:layout_marginBottom="5dp"
                        />

                    <Button
                        android:id="@+id/zc_book_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Book Now"
                        android:textColor="@color/zc_white" />

                </LinearLayout>



            </LinearLayout>

            <!-- Parcel attribute begins-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <!-- Rate/hr ,Seater, AC, history-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="12">

                    <!--Rate/hr-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            zoomcar:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_rupee"/>

                        <TextView
                            android:id="@+id/zc_rate_per_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="200/hr"
                            android:textColor="@color/zc_black"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />


                    </LinearLayout>

                    <!--Seater-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            zoomcar:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_users"/>

                        <TextView
                            android:id="@+id/zc_seater"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4"
                            android:textColor="@color/zc_black"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />

                    </LinearLayout>

                    <!--AC-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            zoomcar:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_ice"/>

                        <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                            android:id="@+id/zc_car_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            zoomcar:fontName="fa.ttf"
                            android:text="@string/fa_check"
                            android:textColor="@color/zc_green"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />

                    </LinearLayout>

                    <!--Booking History-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/zc_booking_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="History"
                            android:textColor="@color/zc_white" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <!-- Parcel attribute ends-->

            <!-- MAP-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Car Location"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        />



                </android.support.v7.widget.CardView>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp">

                <fragment
                    android:id="@+id/zc_car_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>

                <ImageView
                    android:id="@+id/zc_veil_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:color/transparent" />


            </RelativeLayout>

            <!--MAP END-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="9">

                <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                    android:id="@+id/zc_car_share"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    zoomcar:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_share"/>

                <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                    android:id="@+id/zc_car_link"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    zoomcar:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_link"/>

                <com.partho.zoomcar.zoomcarapp.utils.ui.CustomTextView
                    android:id="@+id/zc_car_sms"
                    zoomcar:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_message"/>





            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>
